colorbalance ページで著作権者情報を追記

--- a/colorbalance/index.html
+++ b/colorbalance/index.html
@@ -6,38 +6,66 @@
 <title>color balance checker</title>
 </head>
 <body>
+<h1>ディスプレイの色バランスチェック用の、指標となる画像集</h1>
+
+<p>
+コントラストなどの色バランスを確認するための画像集です。<br>
+坂本の個人利用目的で画像ファイルを直接保存させてもらってます。<br>
+画像ファイルの扱いについての連絡先: <a class="maillink" href="mailto:&#x73;&#x61;&#x6B;&#x61;&#x6D;&#x6F;&#x74;&#x6F;&#x2E;&#x67;&#x73;&#x79;&#x63;&#x2E;&#x33;&#x73;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">email</a>
+</p>
 
 <h2>黒コントラスト系</h2>
 
 <h3>着物の色合いが傘の影から透けて見えること</h3>
+<p>
 <img src="TATSUMI.jpg"><br>
+(画像元: <a target="_blank" href="http://www005.upp.so-net.ne.jp/youen-bijutsu/">妖艶美術館 http://www005.upp.so-net.ne.jp/youen-bijutsu/</a> Toshizo 様)
+</p>
 
 <h3>田植えされた苗の、水面に映る薄い影が目視できること</h3>
 <img src="Taue.jpg"><br>
+(画像元: <a target="_blank" href="https://x.com/keeggy">しきみ</a> 様)
+</p>
 
 <h3>日陰の部分の木肌の色合い変化が確認できること</h3>
+<p>
 <img src="100220.jpg"><br>
+(画像元: <a target="_blank" href="http://www4.plala.or.jp/hituji/">十四羊交差点 http://www4.plala.or.jp/hituji/</a> 高梨ひつじ様)
+</p>
 
 <h3>髪の毛、影、着物の色合い変化が確認できること</h3>
+<p>
 <img src="o_senba.jpg"><br>
+(画像元: <a target="_blank" href="http://www.yomogi.sakura.ne.jp/~maturi/">マツリウタ http://www.yomogi.sakura.ne.jp/~maturi/</a> 様)
+</p>
 
 <h2>淡色グラデーション系</h2>
 
 <h3>淡色部分の表現が潰れてないこと</h3>
+<p>
 <img src="iriya3.jpg"><br>
+(画像元: <a target="_blank" href="http://www4.plala.or.jp/hituji/">十四羊交差点 http://www4.plala.or.jp/hituji/</a> 高梨ひつじ様)
+</p>
 
 <h3>背景グラデーション、腕の影の表現が潰れてないこと</h3>
+<p>
 <img src="ROUBAI.jpg"><br>
+(画像元: <a target="_blank" href="http://www005.upp.so-net.ne.jp/youen-bijutsu/">妖艶美術館 http://www005.upp.so-net.ne.jp/youen-bijutsu/</a> Toshizo 様)
+</p>
 
 <h2>黒系＋白淡色系の組み合わせ</h2>
 
-<h3>特に違和感なければオッケー。</h3>
+<h3>建物の影が完全に真っ黒につぶれていなければOK, その他特に違和感なければOK.</h3>
+<p>
 <img src="090506.jpg"><br>
+(画像元: <a target="_blank" href="http://www4.plala.or.jp/hituji/">十四羊交差点 http://www4.plala.or.jp/hituji/</a> 高梨ひつじ様)
+</p>
 
-<h3>特に違和感なければオッケー。</h3>
+<h3>特に見えづらい要素や全体的な違和感が無ければOK</h3>
+<p>
 <img src="SUZUKAZE.jpg"><br>
-
-
+(画像元: <a target="_blank" href="http://www005.upp.so-net.ne.jp/youen-bijutsu/">妖艶美術館 http://www005.upp.so-net.ne.jp/youen-bijutsu/</a> Toshizo 様)
+</p>
 
 </body>
 </html>
