プライバシーポリシーから広告とアクセス解析ツールの文言を除去

--- a/glamenv-septzen/view-1415.html
+++ b/glamenv-septzen/view-1415.html
@@ -69,31 +69,7 @@ https://developer.apple.com/library/content/documentation/AppleApplications/Refe
 
 <div class="data_body">
 <p class="paragraph">
-本文書は、当サイト（Glamenv-Septzen.net）における個人情報の保護およびその適切な取り扱いについての方針を示したものです。
-<br />
-</p>
-
-<h3 id="id9e5701">当サイトに掲載されている広告について</h3>
-
-<p class="paragraph">
-当サイトでは、第三者配信の広告サービス（Amazonアソシエイト <a class="externallink" href="https://affiliate.amazon.co.jp/" target="_blank">https://affiliate.amazon.co.jp/</a> ）を利用しています。
-<br />
-このような広告配信事業者は、ユーザーの興味に応じた商品やサービスの広告を表示するため、当サイトや他サイトへのアクセスに関する情報 「Cookie」(氏名、住所、メール アドレス、電話番号は含まれません) を使用することがあります。
-<br />
-</p>
-
-<h3 id="ida40454">当サイトが使用しているアクセス解析ツールについて</h3>
-
-<p class="paragraph">
-当サイトでは、Googleによるアクセス解析ツール「Googleアナリティクス」を利用しています。
-<br />
-このGoogleアナリティクスはトラフィックデータの収集のためにCookieを使用しています。
-<br />
-このトラフィックデータは匿名で収集されており、個人を特定するものではありません。
-<br />
-この機能はCookieを無効にすることで収集を拒否することが出来ますので、お使いのブラウザの設定をご確認ください。
-<br />
-この規約に関して、詳しくは <a class="externallink" href="https://www.google.com/policies/privacy/partners/" target="_blank">https://www.google.com/policies/privacy/partners/</a> をご確認ください。
+本文書は、当アーカイブサイトにおける個人情報の保護およびその適切な取り扱いについての方針を示したものです。
 <br />
 </p>
 
@@ -129,7 +105,7 @@ https://developer.apple.com/library/content/documentation/AppleApplications/Refe
 <h3 id="idc12c65">著作権について</h3>
 
 <p class="paragraph">
-当サイト「Glamenv-Septzen.net」に掲載されている情報についての著作権は放棄しておりません。
+当アーカイブサイトに掲載されている情報についての著作権は放棄しておりません。
 <br />
 当サイト記事からの引用に関しましては「引用元の明示」によって無償で引用頂けます。
 <br />
@@ -143,6 +119,11 @@ https://developer.apple.com/library/content/documentation/AppleApplications/Refe
 
 <p class="paragraph">
 初出掲載：2017-03-26
+<br />
+</p>
+
+<p class="paragraph">
+アーカイブサイト用に調整(広告とアクセス解析ツールの文言を除去) : 2025-08-15
 <br />
 </p>
 
