--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja"><head>
 <meta charset="utf-8">
@@ -17,6 +16,12 @@
 
 <p>
 Current Active Blog &rarr; <a href="/">here</a> / 現在のアクティブなBlogは<a href="/">こちら</a>
+</p>
+
+<p>
+Copyright &copy; 2001 - 2025 Masahiko Sakamoto(msakamoto-sf)<br>
+License&nbsp;:&nbsp;<a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a><br>
+Contact&nbsp;:&nbsp;<a target="_blank" href="https://x.com/msakamoto_sf">x(twitter)</a> / <a target="_blank" href="https://github.com/msakamoto-sf/">github</a> / <a class="maillink" target="_blank" href="mailto:&#x73;&#x61;&#x6B;&#x61;&#x6D;&#x6F;&#x74;&#x6F;&#x2E;&#x67;&#x73;&#x79;&#x63;&#x2E;&#x33;&#x73;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">email</a><br>
 </p>
 
 </body>
